<resources>
    <string name="app_name">DrinkingPal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FillWithBlankLine">               \n                   </string>
    <string name="FillWithBlankLine2">                                   </string>
    <string name="FillWithBlankLine3">              \n          \n           </string>
    <string name="GoogleAPIkey">AIzaSyA8MmTILjTs1oW96qtkHUPcsTmbTx34UlE</string>
    <string name="SearchEngineID">27e69ad377a5743e7</string>
    <string name="OnboardingTitle">Onboarding</string>
    <string name="ob_heading_one">Standard Drink Calculator</string>
    <string name="ob_heading_two">Drinking Quiz</string>
    <string name="ob_heading_three">Sobriety Reminder</string>
    <string name="ob_heading_four">Alcohol Information</string>
    <string name="ob_heading_five">Alcohol Consequence</string>
    <string name="ob_heading_six">Drink Data</string>
    <string name="ob_desc_one">Use the standard drink calculator to calculate the amount of alcohol to be consumed and get advice to avoid drinking too much</string>
    <string name="ob_desc_two">Answer thirteen quiz to quickly know if I am currently under the influence of alcohol</string>
    <string name="ob_desc_three">With a fun meme, a daily reminder to keep your drinking in check</string>
    <string name="ob_desc_four">Learn all kinds of information about alcohol and how to drink it safely</string>
    <string name="ob_desc_five">Learn about the various consequences of drinking alcohol as a way to motivate yourself to control your drinking</string>
    <string name="ob_desc_six">Official figures from Australia to give you an idea of how badly alcohol is currently affecting young people</string>
    <string name="ob_desc_seven">Seven</string>
    <string name="InformationFeatureTitle">Alcohol Information</string>
    <string name="AlarmFeatureTitle">Drinking Alarm</string>
    <string name="CalculatorFeatureTitle">Drinking Calculator</string>
    <string name="FaceRecFeatureTitle">Drinking Recognition</string>
    <string name="QuizFeatureTitle">Drinking Quiz</string>
    <string name="ConsequenceTitle">Drink Consequence</string>
    <string name="DataTitle">Drink Data</string>
    <string name="ReminderTitle">Sobriety Reminder</string>
    <string name="AchievementTitle">Achievement</string>
    <string name="StandardDrinkInfoSelection">Standard Drink</string>
    <string name="StandardDrinkInfoSelectionTitle">What is Standard Drink?</string>
    <string name="StandardDrinkDefinition"><b>What is a Standard Drink?</b>\nAustralia\'s national alcohol guidelines use the \'standard drink\' as a measure of alcohol consumed. One standard drink is defined as containing 10 grams of alcohol. (12.5ml approx. of pure alcohol)</string>
    <string name="StandardDrinkDefinition2"><b>What is the Limit?</b>\nAssuie health experts recommend no more than <b>4 standard drinks</b> a day and no more than <b>10 standard drinks</b> in any given week.</string>
    <string name="StandardDrinkGuidanceTitle"><b>Our Handy Guilde can help you</b></string>
    <string name="StandardDrinkGuidanceContent">Standard Drink\n=\n·Spirits 40% alcohol, 30ml nip\n\n·Wine 13% alcohol, 100ml average serving\n\n·Sparkling wine 13% alcohol, 100ml\n\n·Full Strength Beer 4.9% alcohol, 285ml glass\n\n·Light Beer 2.7% alcohol, 425ml glass\n\n·Cider 4.9% alcohol, 285ml glass</string>
    <string name="AlcoholTypeInfoSelection">Alcohol Type</string>
    <string name="AlcoholTypeInfoSelectionTitle">Common Alcohol Types </string>
    <string name="Beer_title"><b>Beer</b></string>
    <string name="Beer">Beer is a strong alcoholic beverage prepared from malt that has been fermented with yeast and hops. Lager, Ale, Craft Beer, and other varieties of beer exist. The Latin word "bibere," which means to drink, is where the term "beer" originates.</string>
    <string name="Wine_title"><b>Wine</b></string>
    <string name="Wine">Wine is typically a fermented grape-based alcoholic beverage. The sugar in the grapes is consumed by yeast, who then transforms it into ethanol and carbon dioxide. Red wine and white wine are the two categories into which most wines fall.</string>
    <string name="Whiskey_title"><b>Whiskey / Bourbon</b></string>
    <string name="Whiskey">A type of American whisky made from rye and maize is called bourbon. A spirit called whisky is created by distilling malted grains, particularly barley or rye. Whiskey is not always whisky, while vice versa is true of bourbon. In order to distinguish itself from whisky, bourbon must be produced in the United States using at least 51% maize.</string>
    <string name="Vodka_title"><b>Vodka</b></string>
    <string name="Vodka">An alcoholic beverage with Russian roots, vodka is produced by distilling rye, wheat, or potatoes. It is distilled liquor with an alcohol concentration of between 40 and 55 percent. It is clear and colourless and has any discernible scent or flavour.</string>
    <string name="Rum_title"><b>Rum</b></string>
    <string name="Rum">Rum is an alcoholic beverage created by fermenting and distilling sugarcane juice or molasses. In most cases, oak barrels are used to mature the distillate, a transparent liquid. Nearly all of the world\'s sugar-producing regions also produce rum.</string>
    <string name="Gin_title"><b>Gin</b></string>
    <string name="Gin">A fermentable grain, starch, or fruit, juniper berries, and additional botanicals are used to make gin. The spirit must include juniper and have a volume alcohol content of at least 40% in order to be categorised as gin. Gin differs from other alcoholic beverages because botanicals are used in the distilling process.</string>
    <string name="Tequila_title"><b>Tequila</b></string>
    <string name="Tequila">Tequila is a Mexican alcoholic beverage that is primarily created from the fermented sap of blue agave plants that have undergone two successive distillations. Tequila has fewer calories, no sugar, and no carbohydrates, making it a potentially healthier alternative to some other types of alcohol.</string>
    <string name="Brandy_title"><b>Brandy</b></string>
    <string name="Brandy">Brandy is an alcoholic beverage made by distilling wine or a fruit mash with yeast. Brandies manufactured from wines or fermented mashes of other fruits are frequently referred to by the name of the specific fruit; the term used alone normally refers to the grape product.</string>
    <string name="HangoverRemedyInfoSelection">Hangover Remedy</string>
    <string name="HangoverRemedyInfoSelection2">Drink Guideline</string>
    <string name="HangoverRemedyInfoSelectionTitle">Hangover Remedies</string>
    <string name="HangoverRemedyInfoSelectionTitle2">Drink Guideline</string>
    <string name="BeforeDrinkTitle">Before Drink Guideline</string>
    <string name="AfterDrinkTitle">After Drink Guideline</string>
    <string name="Eat_title"><b>Eat before Drink</b></string>
    <string name="Eat">When you start drinking, the alcohol will reach your bloodstream more quickly if your stomach is empty. However, food will slow the flow, which allows more time for alcohol to break down. Thus, eating before your drink is essential.</string>
    <string name="Hydrated_title"><b>Stay Hydrated</b></string>
    <string name="Hydrated">Alcohol will dehydrate your body. Hydration is vital even if you are not thirsty. Keep in mind that drinking water in between every few drinks can help you stay hydrated.</string>
    <string name="Fast_title"><b>Don’t Drink too Fast</b></string>
    <string name="Fast">Your body can only process one standard drink per hour. So keep in mind that don’t drink too fast. Take your time to handle one standard drink before drinking the next one. You can always dilute the alcohol with water or juice.</string>
    <string name="Limit_title"><b>Know Your Limit</b></string>
    <string name="Limit">Australian Guidelines suggest adults should intake no more than 4 standard drinks per day or 10 standard drinks during one week. Thus, you should know your limit before drinking and drink no more than the recommended amount of alcohol.</string>
    <string name="Count_title"><b>Count Your Drink</b></string>
    <string name="Count">Set yourself a drinking limit before the first drink and stick to it. People often drink more than they realise. Rather than topping up your glass, you should finish your drink before starting a new one. Therefore, you know how many drinks you have taken. Avoid drinking in rounds as well.</string>
    <string name="No_title"><b>Learn to Say No</b></string>
    <string name="No">Sometimes it is hard to say “NO thanks” to others, especially when peer pressure is hard to resist. However, regardless of what others are saying or doing, it is unnecessary to follow them. Saying NO won’t hurt anyone, but can protect yourself.</string>
    <string name="Drive_title"><b>Don’t Drink and Drive</b></string>
    <string name="Drive">It is against Law to drive with a BAC above 0.05 for full-license drivers and a BAC of 0.00 for Learner and Probationary drivers in Australia. The more drinks you have, the higher chance for you to have car accidents. It will hurt you and others on the road. Please don’t drink and drive. Plan how to get home early (Uber, Public Transport, Friend who doesn’t drink, etc.)</string>
    <string name="Sleep_title"><b>Get some Sleep</b></string>
    <string name="Sleep">Lie in bed and sleep! Sleep is always the cure. Even sleeping for two hours is going to help you recover from the hangover!</string>
    <string name="Drink_water_title"><b>Drink some Water or Juice</b></string>
    <string name="Drink_water">Alcohol will dehydrate your body, your body needs hydration! So the first thing you wake up in the morning should be drinking some water or juice!</string>
    <string name="Vitamin_title"><b>Get some Vitamins</b></string>
    <string name="Vitamin">Your body needs Vitamin supplement after consuming alcohol. The most convenient way is to drink orange juice to gain Vitamin C. Zinc and Vitamin B are helpful to hangover relief.</string>
    <string name="Food_title"><b>Eat some Food</b></string>
    <string name="Food">Maybe right now you don’t want to eat yet, but eating is good to recover from a hangover. Don’t eat too much food or unhealthy food. You should intake food with high protein.</string>
    <string name="Exercise_title"><b>Exercise</b></string>
    <string name="QuitDrinkingTimelineInfoSelection">Recovery Timeline</string>
    <string name="lawConsequenceTitle">Law Consequence</string>
    <string name="moralConsequenceTitle">Moral Consequence</string>
    <string name="healthyConsequenceTitle">Health Consequence</string>
    <string name="Moral_definition_title"><b>Moral Definition</b></string>
    <string name="Moral_definition"><b>Moral standards</b>are those that are concerned with or relate to <b>how people behave</b>, particularly how to distinguish between right and wrong behaviour. Moral standards are the <b>guidelines</b>that people have for the kinds of behaviours they consider to be ethically acceptable and unacceptable.</string>
    <string name="Alcohol_moral_title"><b>Alcohol Affects Moral</b></string>
    <string name="Alcohol_moral">You may experience relaxation, reduced anxiety, and more confidence after consuming alcohol because it has an impact on the area of your brain that regulates inhibition. However, these results disappear shortly. Regardless of how you are feeling, the chemical changes in your brain can quickly cause more <b>unpleasant emotions</b>, including <b>anger, melancholy, or anxiety</b>.\n\nAccording to a recent study, <b>excessive alcohol use</b> may affect men\'s capacity for <b>empathy</b> and <b>ironic perception</b>. According to the study, long-term heavy drinking may <b>harm brain regions responsible for perceiving humour and emotion</b>.</string>
</resources>