<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_information_fragment">
    <fragment
        android:id="@+id/nav_calculator_fragment"
        android:name="com.example.drinkingpal.Fragment.CalculatorFragment"
        android:label="@string/CalculatorFeatureTitle" >
        <action
            android:id="@+id/action_nav_calculator_fragment_to_nav_information_fragment"
            app:destination="@id/nav_information_fragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_information_fragment"
        android:name="com.example.drinkingpal.Fragment.InformationFragment"
        android:label="@string/InformationFeatureTitle" />
    <fragment
        android:id="@+id/timed_sobriety_reminder_switch"
        android:name="com.example.drinkingpal.Fragment.AlarmFragment"
        android:label="@string/ReminderTitle" >

    </fragment>
    <fragment
        android:id="@+id/nav_face_rec_fragment"
        android:name="com.example.drinkingpal.Fragment.FaceRecognitionFragment"
        android:label="@string/FaceRecFeatureTitle">
        <action
            android:id="@+id/action_nav_face_rec_fragment_to_nav_information_fragment"
            app:destination="@id/nav_information_fragment" />
    </fragment>
    <fragment
        android:id="@+id/alcoholTypeInfoFragment"
        android:name="com.example.drinkingpal.Fragment.InformationFragments.AlcoholTypeInfoFragment"
        android:label="@string/AlcoholTypeInfoSelectionTitle"
        tools:layout="@layout/fragment_alcohol_type_info" >
        <action
            android:id="@+id/action_alcoholTypeInfoFragment_to_nav_information_fragment"
            app:destination="@id/nav_information_fragment" />
    </fragment>
    <fragment
        android:id="@+id/standardDrinkInfoFragment"
        android:name="com.example.drinkingpal.Fragment.InformationFragments.StandardDrinkInfoFragment"
        android:label="@string/StandardDrinkInfoSelection"
        tools:layout="@layout/fragment_standard_drink_info" >
        <action
            android:id="@+id/action_standardDrinkInfoFragment_to_nav_information_fragment"
            app:destination="@id/nav_information_fragment" />
    </fragment>
    <fragment
        android:id="@+id/quitDrinkingTimelineInfoFragment"
        android:name="com.example.drinkingpal.Fragment.InformationFragments.QuitDrinkingTimelineInfoFragment"
        android:label="@string/QuitDrinkingTimelineInfoSelection"
        tools:layout="@layout/fragment_quit_drinking_timeline_info" >
        <action
            android:id="@+id/action_quitDrinkingTimelineInfoFragment_to_nav_information_fragment"
            app:destination="@id/nav_information_fragment" />
    </fragment>
    <fragment
        android:id="@+id/hangoverRemediesInfoFragment"
        android:name="com.example.drinkingpal.Fragment.InformationFragments.HangoverRemediesInfoFragment"
        android:label="@string/HangoverRemedyInfoSelection"
        tools:layout="@layout/fragment_hangover_remedies_info" >
        <action
            android:id="@+id/action_hangoverRemediesInfoFragment_to_nav_information_fragment"
            app:destination="@id/nav_information_fragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_consequence_fragment"
        android:name="com.example.drinkingpal.Fragment.ConsequenceFragment"
        android:label="@string/ConsequenceTitle"
        tools:layout="@layout/fragment_consequence" >
        <action
            android:id="@+id/action_nav_consequence_fragment_to_nav_information_fragment"
            app:destination="@id/nav_information_fragment" />
    </fragment>
</navigation>