<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/blankTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FillWithBlankLine" />

    <LinearLayout
        android:id="@+id/standardAndType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/standardDrinkInfoLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                card_view:srcCompat="@drawable/what_standard_drink2" />

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/StandardDrinkInfoSelection"
                android:textColor="@color/deepblue"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/alcoholTypeInfoLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                card_view:srcCompat="@drawable/alcohol_type2" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/AlcoholTypeInfoSelection"
                android:textColor="@color/deepblue"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/logo"
        android:textSize="10sp" />

    <LinearLayout
        android:id="@+id/hangoverdAndQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/hangoverRemediesInfoLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                card_view:srcCompat="@drawable/hangover_remedy2" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/HangoverRemedyInfoSelection2"
                android:textColor="@color/deepblue"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quitDrinkingTimelineInfoLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                card_view:srcCompat="@drawable/quit_drinking_timeline2" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/QuitDrinkingTimelineInfoSelection"
                android:textColor="@color/deepblue"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>